# IntrinsicEngine

./: .gitignore  .mcp.json  ACTIVE.md  AGENTS.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ANALYSIS_HISTORY.md  ARCHITECTURE_ROADMAP.md  BUGS.md  CHANGES_BEFORE_AFTER.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  COMMIT_REVIEW_2026-04-01.md  COMMIT_REVIEW_2026-04-05.md  DONE.md  Dependencies.cmake  GEOMETRY_IMPROVEMENTS.md  PATTERNS.md  PLAN.md  PLAN_REVIEW.md  README.md  REVIEW.md  ROADMAP.md  TEST_REFACTORING.md  TODO.md  TODOS.md  imgui.ini  lsan.supp  new_rendering.md  plan.md  rendering.md  vcpkg-configuration.json  vcpkg.json
benchmarks/: CMakeLists.txt  README.md
benchmarks/baselines/: README.md  ci_gate_latency_github_ubuntu_24_04_v1.json  core_scheduler_hardening_smoke_59fbb84a.json  core_taskgraph_plan_reuse_ecs3_smoke_e8df606f.json  core_taskgraph_plan_reuse_renderprep9_smoke_e8df606f.json  geometry_uv_atlas_fast_staged_edge_grouping_scaling_8ca52438.json  smoke_baseline.json
benchmarks/ci/: README.md
benchmarks/core/: Bench.SchedulerHardeningSmoke.hpp  Bench.TaskGraphPlanReuseSmoke.hpp  Bench_SchedulerHardeningSmoke.cpp  Bench_TaskGraphPlanReuseSmoke.cpp  README.md
benchmarks/datasets/: README.md
benchmarks/geometry/: Bench.BoundaryFirstFlatteningReferenceSmoke.hpp  Bench.GeometrySmoke.hpp  Bench.LocallyOptimalProjectionSmoke.hpp  Bench.PointCloudFilteringSmoke.hpp  Bench.ProgressivePoissonReferenceSmoke.hpp  Bench.QualityMetricsSmoke.hpp  Bench.SignedHeatReferenceSmoke.hpp  Bench.SimplificationQualitySmoke.hpp  Bench.SurfaceSamplingSmoke.hpp  Bench.UvAtlasSmoke.hpp  Bench_BoundaryFirstFlatteningReferenceSmoke.cpp  Bench_ExampleSmoke.cpp  Bench_KMeansGpuVulkanSmoke.cpp  Bench_LocallyOptimalProjectionSmoke.cpp  Bench_PointCloudFilteringSmoke.cpp  Bench_ProgressivePoissonReferenceSmoke.cpp  Bench_QualityMetricsSmoke.cpp  Bench_SignedHeatReferenceSmoke.cpp  Bench_SimplificationQualitySmoke.cpp  Bench_SurfaceSamplingSmoke.cpp  Bench_UvAtlasSmoke.cpp  README.md
benchmarks/physics/: Bench.ParticleSpringReferenceSmoke.hpp  Bench.RigidBodyReferenceSmoke.hpp  Bench.SphFluidReferenceSmoke.hpp  Bench.XpbdClothReferenceSmoke.hpp  Bench_ParticleSpringReferenceSmoke.cpp  Bench_RigidBodyReferenceSmoke.cpp  Bench_SphFluidReferenceSmoke.cpp  Bench_XpbdClothReferenceSmoke.cpp  README.md
benchmarks/rendering/: Bench.FrameRecipeCompileCacheSmoke.hpp  Bench.FramegraphBarrierEmissionSmoke.hpp  Bench.FramegraphCompilerIndexingSmoke.hpp  Bench.FramegraphScratchReuseSmoke.hpp  Bench.RenderGraphParallelRecordingSmoke.hpp  Bench.VertexFetchLayoutSmoke.hpp  Bench_FrameRecipeCompileCacheSmoke.cpp  Bench_FramegraphBarrierEmissionSmoke.cpp  Bench_FramegraphCompilerIndexingSmoke.cpp  Bench_FramegraphScratchReuseSmoke.cpp  Bench_RenderGraphParallelRecordingSmoke.cpp  Bench_VertexFetchLayoutSmoke.cpp  README.md
benchmarks/reports/: BUG-101-uv-atlas-edge-grouping-scaling.md  README.md  core_scheduler_hardening_CORE-007.md  core_taskgraph_plan_reuse_CORE-008.md
benchmarks/runners/: BenchmarkSmokeRunner.cpp  README.md
src/Asset/: Asset.Errors.cppm  Asset.Pipeline.cpp  Asset.Pipeline.cppm  CMakeLists.txt
src/Core/: CMakeLists.txt  Core.Assets.cpp  Core.Assets.cppm  Core.Benchmark.cpp  Core.Benchmark.cppm  Core.Commands.cppm  Core.DAGScheduler.cpp  Core.DAGScheduler.cppm  Core.Error.cppm  Core.FeatureRegistry.cpp  Core.FeatureRegistry.cppm  Core.Filesystem.cpp  Core.Filesystem.cppm  Core.FrameGraph.cpp  Core.FrameGraph.cppm  Core.Handle.cppm  Core.Hash.cppm  Core.IOBackend.cpp  Core.IOBackend.cppm  Core.InplaceFunction.cppm  Core.Input.cpp  Core.Input.cppm  Core.Logging.cpp  Core.Logging.cppm  Core.Memory.cpp  Core.Memory.cppm  Core.Process.cpp  Core.Process.cppm  Core.Profiling.Macros.hpp  Core.Profiling.cppm  Core.ResourcePool.cppm  Core.SystemFeatureCatalog.cppm  Core.Tasks.cpp  Core.Tasks.cppm  Core.Telemetry.cpp  Core.Telemetry.cppm  Core.Window.cpp  Core.Window.cppm  Core.cppm  expected
src/EditorUI/: CMakeLists.txt  Runtime.EditorUI.EntityCommands.cpp  Runtime.EditorUI.SpatialDebugController.cpp  Runtime.EditorUI.cpp
src/Runtime/: CMakeLists.txt  Runtime.AssetIngestService.cpp  Runtime.AssetIngestService.cppm  Runtime.AssetPipeline.cpp  Runtime.AssetPipeline.cppm  Runtime.Engine.cpp  Runtime.Engine.cppm  Runtime.FrameLoop.cpp  Runtime.FrameLoop.cppm  Runtime.GraphicsBackend.cpp  Runtime.GraphicsBackend.cppm  Runtime.PointCloudKMeans.CudaKernels.hpp  Runtime.PointCloudKMeans.cpp  Runtime.PointCloudKMeans.cppm  Runtime.PointCloudKMeans.cu  Runtime.RenderExtraction.cpp  Runtime.RenderExtraction.cppm  Runtime.RenderOrchestrator.cpp  Runtime.RenderOrchestrator.cppm  Runtime.ResourceMaintenance.cpp  Runtime.ResourceMaintenance.cppm  Runtime.SceneManager.cpp  Runtime.SceneManager.cppm  Runtime.SceneSerializer.cpp  Runtime.Selection.cpp  Runtime.Selection.cppm  Runtime.SelectionModule.cpp  Runtime.SelectionModule.cppm  Runtime.SystemBundles.cpp  Runtime.SystemBundles.cppm  Runtime.SystemFeatureCatalog.cppm
src/core/: CMakeLists.txt  Core.Error.cppm  (+50 more)
src_new/: BOUNDARY_REVIEW.md  CMakeLists.txt
tests/: CMakeLists.txt  README.md  TestImGuiFrameScope.hpp  TestMeshBuilders.h  Test_AdaptiveRemeshing.cpp  Test_ArchitectureSLO.cpp  Test_AssetIngestService.cpp  Test_AssetPipeline.cpp  Test_BDASharedBufferContract.cpp  Test_BVH.cpp  Test_BVHDebugDraw.cpp  Test_Benchmark.cpp  Test_Boolean.cpp  Test_BoundedHeap.cpp  Test_BoundingDebugDraw.cpp  Test_CameraSpaceTransforms.cpp  Test_ColorMapper.cpp  Test_ColorMapping.cpp  Test_Colormap.cpp  Test_CompileHotspotRefactors.cpp  Test_CompositionAndValidation.cpp  Test_ContactManifold.cpp  Test_Containment.cpp  Test_ConvexHull.cpp  Test_ConvexHullDebugDraw.cpp  Test_CoreAssetSafety.cpp  Test_CoreAssets.cpp  Test_CoreAssets_Lease.cpp  Test_CoreAssets_ReloadLease.cpp  Test_CoreAssets_UniquePtrLoader.cpp  Test_CoreAssets_UniquePtrMaterial.cpp  Test_CoreCommands.cpp  Test_CoreError.cpp  Test_CoreFrameGraph.cpp  Test_CoreHash.cpp  Test_CoreMemory.cpp  Test_CoreResourcePool.cpp  Test_CoreTasks.cpp  Test_CudaDevice.cpp  Test_Curvature.cpp  (+136 more)
(+4634 files in other folders)
